[add] Icon profile xlarge, 2xlarge 추가

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -176,6 +176,7 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper name=IconProfileXLargeFill></IconWrapper>
                             <IconWrapper name=IconArrowXLargeLine></IconWrapper>
                             <IconWrapper name=IconCloseXLargeLine></IconWrapper>
                             <IconWrapper name=IconQuestionXLargeLine></IconWrapper>
@@ -186,6 +187,13 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconCelebrateXLargeLine></IconWrapper>
                             <IconWrapper name=IconAnswerXLargeLine></IconWrapper>
                             <IconWrapper name=IconMegaphoneXLargeLine></IconWrapper>
+                        </div>
+                    </div>
+                    <!--2x-large-->
+                    <div>
+                        <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper name=IconProfile2XLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--spinner-->
