--- a/stories/Components/Message/Tooltip.stories.mdx
+++ b/stories/Components/Message/Tooltip.stories.mdx
@@ -27,7 +27,7 @@ export const Basic = (args, { argTypes }) => ({
   template: `<div style="width: 100%; display: flex; justify-content: center;">
                 <Tooltip :placement="placement">
    			        <Icon name="IconProfileLargeFill"></Icon>
-   			            <template v-slot:Tooltip>
+   			            <template v-slot:popover>
    				            <div>hello</div>
    			            </template>
    			    </Tooltip>
