--- a/stories/DataDisplay/ListItem.stories.mdx
+++ b/stories/DataDisplay/ListItem.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import ListItem from "@/src/Components/DataDisplay/ListItem";
+import ListItem, { ListItemSizes, ListItemCursors } from "@/src/Components/DataDisplay/ListItem";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 
 <Meta
-    title="DESIGN SYSTEM/DataDisplay/ListItem"
+    title="Data Display/ListItem"
     component={ ListItem }
     argTypes={{
         label: {
@@ -21,17 +21,25 @@ import Typography from "@/src/Elements/Core/Typography/Typography";
             defaultValue: "medium",
             control: {
                 type: "select",
-                options: ["small", "medium", "large"],
+                options: ListItemSizes,
             },
         },
+        cursor: {
+            description: "커서 모양",
+            defaultValue: "pointer",
+            control: {
+                type: "select",
+                options: ListItemCursors,
+            }
+        }
     }}
 />
 
-export const Basic = (args, { argTypes }) => ({
+export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { ListItem, Typography },
     template:
-      `<ListItem :size="size">
+      `<ListItem :size="size" :cursor="cursor">
         <Typography type="body2" color="gray800">
           {{ label }}
         </Typography>
@@ -42,11 +50,11 @@ export const Basic = (args, { argTypes }) => ({
 
 **ListItem** 컴포넌트의 문서입니다.
 
-<Story name="Basic" height="100px">
-    {Basic.bind({})}
+<Story name="Default" height="100px">
+    {Default.bind({})}
 </Story>
 
-<ArgsTable story="Basic" />
+<ArgsTable story="Default" />
 
 ## Stories
 ### Sizes
@@ -58,6 +66,21 @@ export const Basic = (args, { argTypes }) => ({
                   <ListItem size="small">Small</ListItem>
                   <ListItem size="medium">Medium</ListItem>
                   <ListItem size="large">Large</ListItem>
+                </div>
+        `,
+            components: { ListItem },
+        }}
+    </Story>
+</Canvas>
+
+### Cursors
+<Canvas>
+    <Story name="Cursors" height="100px">
+        {{
+            template: `
+                <div>
+                  <ListItem size="medium" cursor="pointer">Pointer</ListItem>
+                  <ListItem size="medium" cursor="default">Default</ListItem>
                 </div>
         `,
             components: { ListItem },
