[add] Icon rotation
Story에서 props로 넘길 때 String으로 들어가서 Number로 변환

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -57,6 +57,17 @@ import Typography from '@/src/Elements/Core/Typography/Typography';
         options: ["gray", "primary", "success"],
       },
     },
+    rotation: {
+      description: "아이콘의 회전 각도<br/>`Number`",
+      table: {
+        type: {
+          summary: null,
+        },
+      },
+      control: {
+        type: "text",
+      },
+    },
   }}
 />
 
@@ -64,7 +75,7 @@ export const Default = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Icon },
   template:
-    '<Icon :name="name" :color="color" :loading="loading" :spinner-color="spinnerColor" />',
+    '<Icon :name="name" :color="color" :loading="loading" :spinner-color="spinnerColor" :rotation="Number(rotation)" />',
 });
 
 # Icon
