[add] story 부연설명 추가

--- a/stories/Typography/Typography.stories.mdx
+++ b/stories/Typography/Typography.stories.mdx
@@ -112,8 +112,8 @@ export const Basic = (args, { argTypes }) => ({
                     <Typography element="h4" type="headline4">Headline4</Typography>
                     <Typography element="h5" type="headline5">Headline5</Typography>
                     <Typography element="h6" type="headline6">Headline6</Typography>
-                    <Typography type="body1">Body1</Typography>
-                    <Typography type="body2">Body2</Typography>
+                    <Typography type="body1">Body1 - p : 본문에 사용합니다.</Typography>
+                    <Typography type="body2">Body2 - 본문과 함께 보이는 댓글에 사용합니다. 본문과 분리된 (직부캠 후기, 직부캠 커뮤니티)의 경우 본문 사이즈 중 자유롭게 사용합니다.</Typography>
                     <Typography type="caption1">Caption1</Typography>
                     <Typography type="caption2">Caption2</Typography>
                   </div>
