[add] NarrowButton docs - All Story 추가

--- a/stories/Button/NarrowButton.stories.mdx
+++ b/stories/Button/NarrowButton.stories.mdx
@@ -50,6 +50,61 @@ export const Basic = (args, { argTypes }) => ({
 
 ## Stories
 
+### All
+<Canvas>
+    <Story name="All" height="100px">
+        {{
+            template: `
+            <div>
+                <div style="display: flex">
+                    <NarrowButton color="gray400">
+                        Small Gray500
+                        <template v-slot:right-icon>
+                            <Icon name="IconTextArrowSmallFill" color="gray400" />
+                        </template>
+                    </NarrowButton>
+                    <NarrowButton color="gray600">
+                        Small Gray600
+                        <template v-slot:right-icon>
+                            <Icon name="IconTextArrowSmallFill" color="gray500" />
+                        </template>
+                    </NarrowButton>
+                </div>
+                <div style="display: flex">
+                    <NarrowButton color="gray400" size="medium">
+                        Medium Gray500
+                        <template v-slot:right-icon>
+                            <Icon name="IconTextArrowSmallFill" color="gray400" />
+                        </template>
+                    </NarrowButton>
+                    <NarrowButton color="gray600" size="medium">
+                        Medium Gray600
+                        <template v-slot:right-icon>
+                            <Icon name="IconTextArrowSmallFill" color="gray500" />
+                        </template>
+                    </NarrowButton>
+                </div>
+                <div style="display: flex">
+                    <NarrowButton color="gray400" size="large">
+                        Large Gray500
+                        <template v-slot:right-icon>
+                            <Icon name="IconTextArrowSmallFill" color="gray400" />
+                        </template>
+                    </NarrowButton>
+                    <NarrowButton color="gray600" size="large">
+                        Large Gray600
+                        <template v-slot:right-icon>
+                            <Icon name="IconTextArrowSmallFill" color="gray500" />
+                        </template>
+                    </NarrowButton>
+                </div>
+            </div>
+        `,
+            components: { NarrowButton, Icon },
+        }}
+    </Story>
+</Canvas>
+
 ### Sizes
 <Canvas>
     <Story name="Sizes" height="100px">
