[add] LinkButton nuxt prop

--- a/stories/Button/LinkButton.stories.mdx
+++ b/stories/Button/LinkButton.stories.mdx
@@ -37,7 +37,9 @@ import LinkButton from "@/src/Components/Button/LinkButton";
             defaultValue: true,
             control: {
                 type: "boolean",
-            },
+        },
+        nuxt: {
+            description: "nuxt or vue",
         },
     }}
 />
