NarrowButton Component, Docs 개선 (#163)
* [add] NarrowButton size prop

* [add] NarrowButton left-icon, right-icon slot

* [add] NarrowButton docs 개선

* [change] NarrowButton 코드 개선

* [add] NarrowButton docs - All Story 추가

* [fix] NarrowButton docs 개선

* [fix] story 이름

--- a/stories/Button/NarrowButton.stories.mdx
+++ b/stories/Button/NarrowButton.stories.mdx
@@ -31,7 +31,7 @@ import Icon from "@/src/Elements/Core/Icon/Icon";
 />
 
 
-export const Basic = (args, { argTypes }) => ({
+export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { NarrowButton },
     template:
@@ -42,13 +42,68 @@ export const Basic = (args, { argTypes }) => ({
 
 **NarrowButton** 컴포넌트의 문서입니다.
 
-<Story name="Basic" height="100px">
-  {Basic.bind({})}
+<Story name="Default" height="100px">
+  {Default.bind({})}
 </Story>
 
-<ArgsTable story="Basic" />
+<ArgsTable story="Default" />
 
 ## Stories
+
+### All
+<Canvas>
+    <Story name="All" height="100px">
+        {{
+            template: `
+                <div>
+                    <div style="display: flex">
+                        <NarrowButton color="gray400">
+                            Small Gray500
+                            <template v-slot:right-icon>
+                                <Icon name="IconTextArrowSmallFill" color="gray400" />
+                            </template>
+                        </NarrowButton>
+                        <NarrowButton color="gray600">
+                            Small Gray600
+                            <template v-slot:right-icon>
+                                <Icon name="IconTextArrowSmallFill" color="gray500" />
+                            </template>
+                        </NarrowButton>
+                    </div>
+                    <div style="display: flex">
+                        <NarrowButton color="gray400" size="medium">
+                            Medium Gray500
+                            <template v-slot:right-icon>
+                                <Icon name="IconTextArrowSmallFill" color="gray400" />
+                            </template>
+                        </NarrowButton>
+                        <NarrowButton color="gray600" size="medium">
+                            Medium Gray600
+                            <template v-slot:right-icon>
+                                <Icon name="IconTextArrowSmallFill" color="gray500" />
+                            </template>
+                        </NarrowButton>
+                    </div>
+                    <div style="display: flex">
+                        <NarrowButton color="gray400" size="large">
+                            Large Gray500
+                            <template v-slot:right-icon>
+                                <Icon name="IconTextArrowSmallFill" color="gray400" />
+                            </template>
+                        </NarrowButton>
+                        <NarrowButton color="gray600" size="large">
+                            Large Gray600
+                            <template v-slot:right-icon>
+                                <Icon name="IconTextArrowSmallFill" color="gray500" />
+                            </template>
+                        </NarrowButton>
+                    </div>
+                </div>
+            `,
+            components: { NarrowButton, Icon },
+        }}
+    </Story>
+</Canvas>
 
 ### Sizes
 <Canvas>
@@ -94,11 +149,11 @@ export const Basic = (args, { argTypes }) => ({
                 <div style="display: flex">
                     <NarrowButton color="gray400">
                         <template v-slot:left-icon>
-                            <Icon name="IconPlusSmallLine" color="gray500" />
+                            <Icon name="IconPlusSmallLine" color="gray400" />
                         </template>
                         WithIcon
                         <template v-slot:right-icon>
-                            <Icon name="IconTextArrowSmallFill" color="gray500" />
+                            <Icon name="IconTextArrowSmallFill" color="gray400" />
                         </template>
                     </NarrowButton>
                     <NarrowButton color="gray600">
