[remove] ChipGroup table 목록 삭제

--- a/stories/DataDisplay/ChipGroup.stories.mdx
+++ b/stories/DataDisplay/ChipGroup.stories.mdx
@@ -11,8 +11,7 @@ import ChipGroup from '@/src/Components/DataDisplay/ChipGroup';
             defaultValue: "medium",
             table: {
                 type: {
-                    summary: "목록",
-                    detail: '"small" "medium" "large"',
+                    summary: null,
                 },
             },
             control: {
