--- a/stories/Button/LinkButton.stories.mdx
+++ b/stories/Button/LinkButton.stories.mdx
@@ -1,8 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import LinkButton from "@/src/Components/Button/LinkButton";
+import LinkButton, { linkButtonColors, linkButtonTargets } from "@/src/Components/Button/LinkButton";
 
 <Meta
-    title="DESIGN SYSTEM/Button/LinkButton"
+    title="General/Button/LinkButton"
     component={ LinkButton }
     argTypes={{
         label: {
@@ -12,7 +12,6 @@ import LinkButton from "@/src/Components/Button/LinkButton";
         },
         type: {
             description: "글자 크기",
-            defaultValue: "body1",
             control: {
                 type: "text",
             },
@@ -26,32 +25,53 @@ import LinkButton from "@/src/Components/Button/LinkButton";
         },
         color: {
             description: "버튼 색상",
-            defaultValue: "blue600",
             control: {
                 type: "select",
-                options: ["blue600", "blue400"],
+                options: linkButtonColors,
+            },
+        },
+        external: {
+            description: "외부 링크(a 태그 사용)",
+        },
+        nuxt: {
+            description: "nuxt에서 사용",
+        },
+        target: {
+            description: "문서가 열리는 위치",
+            control: {
+                type: "select",
+                options: linkButtonTargets,
             },
         }
     }}
 />
 
 
-export const Basic = (args, { argTypes }) => ({
+export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { LinkButton },
     template:
-        `<LinkButton :type="type" :to="to" :color="color">{{label}}</LinkButton>`,
+        `<LinkButton
+            :type="type"
+            :to="to"
+            :color="color"
+            :external="external"
+            :nuxt="nuxt"
+            :target="target"
+        >
+            {{label}}
+        </LinkButton>`,
 });
 
 # LinkButton
 
 **LinkButton** 컴포넌트의 문서입니다.
 
-<Story name="Basic" height="100px">
-    {Basic.bind({})}
+<Story name="Default" height="100px">
+    {Default.bind({})}
 </Story>
 
-<ArgsTable story="Basic" />
+<ArgsTable story="Default" />
 
 ## Stories
 ### All
@@ -62,8 +82,8 @@ export const Basic = (args, { argTypes }) => ({
             template: `
                 <div>
                     <LinkButton>이동하지 않는 링크 버튼</LinkButton>
-                    <LinkButton to="#" color="blue400">맨위로 이동하기</LinkButton>
-                    <LinkButton to="https://comento.kr">코멘토로 이동하기</LinkButton>
+                    <LinkButton to="#" color="blue400" type="body2">맨위로 이동하기</LinkButton>
+                    <LinkButton to="https://comento.kr" type="headline5">코멘토로 이동하기</LinkButton>
                 </div>
         `,
             components: { LinkButton },
@@ -71,3 +91,17 @@ export const Basic = (args, { argTypes }) => ({
     </Story>
 </Canvas>
 
+### Colors
+<Canvas>
+    <Story name="Colors" height="100px">
+        {{
+            template: `
+                <div>
+                    <LinkButton color="blue400">blue400</LinkButton>
+                    <LinkButton color="blue600">blue600</LinkButton>
+                </div>
+        `,
+            components: { LinkButton },
+        }}
+    </Story>
+</Canvas>
